samples/_failures_safe/1761128721_9b4aee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_872153c6.c: In function ‘main’:
./samples/SAFE/__tmp_872153c6.c:146:5: error: expected expression at end of input
  146 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_872153c6.c:146:5: error: expected declaration or statement at end of input
